@@ -29,15 +29,14 @@ import javax.naming.InitialContext;
 import javax.naming.NamingException;
 
 import java.io.File;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 import org.operaton.bpm.container.impl.tomcat.deployment.TomcatParseBpmPlatformXmlStep;
 import org.junit.Rule;
 import org.junit.Test;
-import org.springframework.mock.jndi.SimpleNamingContext;
 
 /**
  * Checks the correct retrieval of bpm-platform.xml file through JNDI,
@@ -64,9 +63,12 @@ public class BpmPlatformXmlLocationTest {
   private static final String BPM_PLATFORM_XML_LOCATION_URL_HTTPS_PROTOCOL = "https://localhost:8080/operaton/" + BPM_PLATFORM_XML_FILE;
 
   @Rule
-  public MockInitialContextRule initialContextRule = new MockInitialContextRule(new SimpleNamingContext());
+  public MockInitialContextRule initialContextRule = new MockInitialContextRule(new InitialContext());
 
-  @Test
+    public BpmPlatformXmlLocationTest() throws NamingException {
+    }
+
+    @Test
   public void checkValidBpmPlatformXmlResourceLocationForUrl() throws MalformedURLException {
     TomcatParseBpmPlatformXmlStep tomcatParseBpmPlatformXmlStep = new TomcatParseBpmPlatformXmlStep();
 
@@ -194,13 +196,9 @@ public class BpmPlatformXmlLocationTest {
   
   private static String getBpmPlatformXmlLocationParentDir() {
     String baseDir = BpmPlatformXmlLocationTest.class.getProtectionDomain().getCodeSource().getLocation().getFile();
-    try {
       // replace escaped whitespaces in path
-      baseDir = URLDecoder.decode(baseDir, "UTF-8");
-    } catch (UnsupportedEncodingException e) {
-      e.printStackTrace();
-    }
-    return baseDir
+      baseDir = URLDecoder.decode(baseDir, StandardCharsets.UTF_8);
+      return baseDir
         + BpmPlatformXmlLocationTest.class.getPackage().getName().replace(".", File.separator);
   }
 
